# haskell-ch13

./: intermission.hs  modifyingCode.hs  person.hs
hangman/: hangman.cabal
hangman/.stack-work/install/3573363d/flag-cache/: hangman-0.1.0.0  random-1.1-9tceXaeYIMZ4JrKq20Egog  split-0.2.3.2-CJl40zTyCIV16Pr60nb7CT
hangman/data/: dict.txt
hangman/src/: Main.hs
